--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Compile Include="Categoria.cs" />
     <Compile Include="Marca.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StockProducto.cs" />
     <Compile Include="UnidadMedida.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
