--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -42,9 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categoria.cs" />
+    <Compile Include="Compra.cs" />
+    <Compile Include="DetalleCompra.cs" />
     <Compile Include="Marca.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proveedor.cs" />
     <Compile Include="StockProducto.cs" />
     <Compile Include="UnidadMedida.cs" />
   </ItemGroup>
