--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -44,12 +44,18 @@
     <Compile Include="Categoria.cs" />
     <Compile Include="Compra.cs" />
     <Compile Include="DetalleCompra.cs" />
+    <Compile Include="DetalleVenta.cs" />
+    <Compile Include="Empaque.cs" />
     <Compile Include="Marca.cs" />
     <Compile Include="Producto.cs" />
+    <Compile Include="ProductoVenta.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
+    <Compile Include="SessionActual.cs" />
     <Compile Include="StockProducto.cs" />
-    <Compile Include="UnidadMedida.cs" />
+    <Compile Include="Turno.cs" />
+    <Compile Include="Usuario.cs" />
+    <Compile Include="Venta.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
