--- a/Market/App.config
+++ b/Market/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Market.Properties.Settings.cn" connectionString="Data Source=localhost;Initial Catalog=DB_MiniMarket;Persist Security Info=True;User ID=sa;Password=Qqmelo#13;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
