--- a/Negocio/packages.config
+++ b/Negocio/packages.config
@@ -32,6 +32,7 @@
   <package id="Microsoft.Extensions.WebEncoders" version="8.0.11" targetFramework="net48" />
   <package id="Microsoft.Net.Http.Headers" version="2.3.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="4.5.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
